--- a/css/webflow/benwittbrodt.webflow.css
+++ b/css/webflow/benwittbrodt.webflow.css
@@ -59,7 +59,7 @@ h1 {
   margin-top: 20px;
   margin-bottom: 10px;
   font-family: Lato, sans-serif;
-  color: #fff;
+  color: #000000;
   font-size: 34px;
   line-height: 45px;
   font-weight: 300;
